# genomde_mbcheck

./: .gitignore  LICENSE  Meldebestaetigung.py  README.md  Spec.md  mbcheck.py  pyproject.toml
Examples/: Meldebestaetigung_1N4I391IHS.csv  Meldebestaetigung_7GOK6L33N6.csv  Meldebestaetigung_DIL5WZ3V8O.csv  Meldebestaetigung_W8C2MM72VD.csv  Meldebestaetigung_XMOZ917R1B.csv
